# aadhar

./: DEPLOY_CHECKLIST.md  QUICKSTART.md  README.md  RENDER_SETUP.md  check_backend.py  docker-compose.yml
analytics_backend/: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml  requirements.txt
analytics_backend/app/: __init__.py  config.py  main.py  models.py
analytics_backend/app/api/: __init__.py  routes.py
analytics_backend/app/engines/: __init__.py  anomaly.py  correlation.py  dimensional.py  preprocessor.py  volatility.py
analytics_backend/app/services/: __init__.py  llm_reasoning.py  orchestrator.py
analytics_backend/sample_data/: aadhaar_enrollment_sample.csv
analytics_backend/tests/: __init__.py  test_engines.py
backend/: Dockerfile  package-lock.json  package.json
backend/src/: index.ts
backend/src/data/: mockData.ts
backend/src/services/: analyzer.ts
docs/: architecture.md
frontend/: .env.example  .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: AnalyticsDashboard.tsx  AnomalyList.tsx  Dashboard.tsx  DropZone.tsx  HeroSection.tsx  InsightSummary.tsx  IntelligenceReport.tsx  LLMInsightsPanel.tsx  LLMReasoningBar.tsx
frontend/src/components/charts/: AgeDistributionChart.tsx  CorrelationMatrix.tsx  DimensionalAnalysis.tsx  EnrollmentTrendChart.tsx  Heatmap.tsx  HotspotBubbleChart.tsx  RejectionReasonsChart.tsx  index.ts  (+1 more)
frontend/src/data/: mockData.ts
frontend/src/services/: analyticsApi.ts
