[project]
name = "aadhaar-pulse-analytics"
version = "1.0.0"
description = "Aadhaar Pulse - End-to-End Analytical & Reasoning Intelligence Engine"
authors = [
    {name = "UIDAI Analytics Team"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
